correcting the alignment

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -196,9 +196,11 @@ margin-top: 10px;
   font-size: 18px;
   max-height: 35px;
   position: fixed;
-  left: 10px;
-  right: 10px;
-  width: calc(100% - 20px);
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: 0 10px;
+  padding: 10px;
 }
 /* #listen button{
   border-radius:5px;
